tooling/nargo_cli/tests/snapshots/execution_success/prelude/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    let _xs: Vec<Field> = Vec::new();
    let _option: Option<Field> = Option::none();
    print("42\n");
    println("42");
}

mod a {
    use std::prelude::{Option, Vec};

    fn main() {
        let _xs: Vec<_> = Vec::new();
        let _option: Option<_> = Option::none();
        print("42\n");
        println("42");
    }
}

mod b {
    fn main() {
        let _xs: Vec<_> = Vec::new();
        let _option: Option<_> = Option::none();
        print("42\n");
        println("42");
    }
}
